Add range-v3 as a dependency

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,6 +7,10 @@ message(STATUS "Found Eigen3 ${Eigen3_VERSION}")
 find_package(fmt CONFIG REQUIRED)
 message(STATUS "Found {fmt} ${fmt_VERSION}")
 
+find_package(range-v3 CONFIG REQUIRED)
+message(STATUS "Found range-v3 ${range-v3_VERSION}")
+#target_link_libraries(main PRIVATE range-v3 range-v3-meta range-v3::meta range-v3-concepts)
+
 find_package(ZLIB REQUIRED)
 message(STATUS "Found zlib ${ZLIB_VERSION_STRING}")
 
@@ -19,12 +23,11 @@ set(
 set(
         data_module_hdr
         EigenTypes.hpp
-        FileFormats.hpp
         HapsMatrixType.hpp
         Utils.hpp
 )
 
 add_library(data_module_lib STATIC ${data_module_src} ${data_module_hdr})
 target_include_directories(data_module_lib INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
-target_link_libraries(data_module_lib PRIVATE Eigen3::Eigen fmt::fmt ZLIB::ZLIB)
+target_link_libraries(data_module_lib PRIVATE Eigen3::Eigen fmt::fmt range-v3 ZLIB::ZLIB)
 target_link_libraries(data_module_lib PRIVATE project_warnings project_settings)
