--- a/.github/workflows/unit-macos.yml
+++ b/.github/workflows/unit-macos.yml
@@ -15,6 +15,10 @@ jobs:
     runs-on: macos-latest
 
     steps:
+      - name: set xcode version
+        uses: maxim-lobanov/setup-xcode@v1
+        with:
+          xcode-version: latest-stable
 
       - name: checkout repo & vcpkg submodule
         uses: actions/checkout@v2
