--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -13,7 +13,8 @@ add_definitions(-DDATA_MODULE_TEST_DIR=\"${CMAKE_CURRENT_LIST_DIR}\")
 set(
         test_src
         TestHapsMatrixType.cpp
-        TestUtils.cpp
+        utils/TestFileUtils.cpp
+        utils/TestStringUtils.cpp
 )
 
 add_executable(unit_tests ${test_src})
