Add basic python bindings

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -33,3 +33,9 @@ add_library(data_module_lib STATIC ${data_module_src} ${data_module_hdr})
 target_include_directories(data_module_lib INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
 target_link_libraries(data_module_lib PRIVATE Eigen3::Eigen fmt::fmt range-v3 ZLIB::ZLIB)
 target_link_libraries(data_module_lib PRIVATE project_warnings project_settings)
+
+if (PYTHON_BINDINGS)
+    set_target_properties(data_module_lib PROPERTIES POSITION_INDEPENDENT_CODE TRUE)
+    pybind11_add_module(asmc_data_module python_bindings/bindings.cpp)
+    target_link_libraries(asmc_data_module PRIVATE Eigen3::Eigen fmt::fmt range-v3 ZLIB::ZLIB data_module_lib)
+endif ()
