--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -3,7 +3,7 @@ name: Python 3.6 3.9 Windows, macOS, Linux
 on:
   push:
     branches:
-      - master
+      - main
   pull_request:
     branches:
       - '**'
