--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -15,6 +15,7 @@ jobs:
     runs-on: ${{ matrix.os }}
 
     strategy:
+      fail-fast: false
       matrix:
         python-version: [3.6, 3.9]
         os: [windows-latest, macos-latest, ubuntu-latest]
