--- a/.github/workflows/unit-ubuntu.yml
+++ b/.github/workflows/unit-ubuntu.yml
@@ -16,7 +16,7 @@ jobs:
 
     steps:
 
-      - name: checkout repo & vcpkg submodule
+      - name: checkout repo & submodules
         uses: actions/checkout@v2
         with:
           submodules: true
@@ -49,3 +49,20 @@ jobs:
       - name: cmake test
         run: ctest -j2 --output-on-failure
         working-directory: build_dir
+
+      - name: Set up Python 3.9
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.9
+          architecture: x64
+
+      - name: install python bindings
+        run: |
+          python -m pip install --upgrade pip setuptools wheel
+          python -m pip install .[dev]
+        env:
+          CXX: g++-9
+
+      - name: python unit tests
+        run: |
+          pytest test/python
