--- a/.github/workflows/unit-macos.yml
+++ b/.github/workflows/unit-macos.yml
@@ -61,7 +61,7 @@ jobs:
       - name: install python bindings
         run: |
           python -m pip install --upgrade pip setuptools wheel
-          python -m pip install .[dev]
+          python -m pip install .[dev] -v
 
       - name: python unit tests
         run: |
