--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -46,7 +46,7 @@ jobs:
       - name: install python bindings
         run: |
           python -m pip install --upgrade pip setuptools wheel
-          python -m pip install .[dev] -v
+          python -m pip install .[dev]
         env:
           CXX: g++-9
 
