--- a/.github/workflows/unit-ubuntu.yml
+++ b/.github/workflows/unit-ubuntu.yml
@@ -59,7 +59,7 @@ jobs:
       - name: install python bindings
         run: |
           python -m pip install --upgrade pip setuptools wheel
-          python -m pip install .[dev] -v
+          python -m pip install .[dev]
         env:
           CXX: g++-9
 
