--- a/.github/workflows/unit-windows.yml
+++ b/.github/workflows/unit-windows.yml
@@ -57,7 +57,7 @@ jobs:
       - name: install python bindings
         run: |
           python -m pip install --upgrade pip setuptools wheel
-          python -m pip install .[dev] -v
+          python -m pip install .[dev]
 
       - name: python unit tests
         run: |
