Split into two different matrix types

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,6 +9,9 @@ message(STATUS "Found Eigen3 ${Eigen3_VERSION}")
 find_package(fmt CONFIG REQUIRED)
 message(STATUS "Found {fmt} ${fmt_VERSION}")
 
+find_package(hdf5 CONFIG REQUIRED)
+message(STATUS "Found hdf5 ${hdf5_VERSION}")
+
 find_package(range-v3 CONFIG REQUIRED)
 message(STATUS "Found range-v3 ${range-v3_VERSION}")
 #target_link_libraries(main PRIVATE range-v3 range-v3-meta range-v3::meta range-v3-concepts)
@@ -18,6 +21,7 @@ message(STATUS "Found zlib ${ZLIB_VERSION_STRING}")
 
 set(
         data_module_src
+        BedMatrixType.cpp
         HapsMatrixType.cpp
         utils/FileUtils.cpp
         utils/StringUtils.cpp
@@ -26,6 +30,7 @@ set(
 set(
         data_module_hdr
         HapsMatrixType.hpp
+        BedMatrixType.hpp
         utils/EigenTypes.hpp
         utils/FileUtils.hpp
         utils/StringUtils.hpp
