--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -13,7 +13,7 @@ env:
   CIBW_ARCHS: auto64
   CIBW_MANYLINUX_X86_64_IMAGE: manylinux2014
   CIBW_MANYLINUX_I686_IMAGE: manylinux2014
-  CIBW_BEFORE_BUILD: pip install --upgrade pip setuptools wheel
+  CIBW_BEFORE_BUILD: pip install --upgrade pip setuptools wheel ninja
   CIBW_BEFORE_ALL_LINUX: bash scripts/install_dependencies.sh
   CIBW_BEFORE_ALL_MACOS: bash scripts/install_dependencies.sh
   CIBW_BEFORE_ALL_WINDOWS: .\scripts\install_dependencies.bat
