Attempt update of all other workflows

--- a/.github/workflows/python-wheels.yml
+++ b/.github/workflows/python-wheels.yml
@@ -3,7 +3,7 @@ name: Build python wheels
 on:
   push:
     branches:
-      - xmain
+      - main
   pull_request:
     branches:
       - main
@@ -17,9 +17,6 @@ env:
   CIBW_MANYLINUX_X86_64_IMAGE: manylinux2014
   CIBW_MANYLINUX_I686_IMAGE: manylinux2014
   CIBW_BEFORE_BUILD: pip install --upgrade pip setuptools wheel ninja
-  CIBW_BEFORE_ALL_LINUX: bash scripts/install_dependencies.sh
-  CIBW_BEFORE_ALL_MACOS: bash scripts/install_dependencies.sh
-  CIBW_BEFORE_ALL_WINDOWS: .\scripts\install_dependencies.bat
   MACOSX_DEPLOYMENT_TARGET: 10.15
 
 jobs:
