--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -1,9 +1,9 @@
-name: "Unit test coverage"
+name: Unit test coverage
 
 on:
   push:
     branches:
-      - xmain
+      - main
   pull_request:
     branches:
       - '**'
@@ -28,19 +28,17 @@ jobs:
         uses: actions/cache@v2
         id: cache
         with:
-          path: vcpkg/installed
-          key: ${{ runner.os }}-${{ hashFiles('scripts/vcpkg_dependencies', 'vcpkg/CHANGELOG.md') }}
-
-      - name: install dependencies
-        run: |
-          bash scripts/install_dependencies.sh
-        if: steps.cache.outputs.cache-hit != 'true'
+          path: |
+            vcpkg/
+            build_dir/vcpkg_installed/
+          key: ${{ runner.os }}-${{ hashFiles('vcpkg.json', 'vcpkg/CHANGELOG.md') }}
 
       - name: install tools
         run: sudo apt install lcov libcurl4-openssl-dev
 
       - name: make build directory
         run: mkdir build_dir
+        if: steps.cache.outputs.cache-hit != 'true'
 
       - name: run unit tests with coverage
         run: |
