--- a/.github/workflows/sanitisers.yml
+++ b/.github/workflows/sanitisers.yml
@@ -3,7 +3,7 @@ name: Sanitiser checks
 on:
   push:
     branches:
-      - xmain
+      - main
   pull_request:
     branches:
       - '**'
@@ -25,21 +25,23 @@ jobs:
         uses: actions/cache@v2
         id: cache
         with:
-          path: vcpkg/installed
-          key: ${{ runner.os }}-${{ hashFiles('scripts/vcpkg_dependencies', 'vcpkg/CHANGELOG.md') }}
+          path: |
+            vcpkg/
+            build_dir/vcpkg_installed/
+          key: ${{ runner.os }}-${{ hashFiles('vcpkg.json', 'vcpkg/CHANGELOG.md') }}
 
       - name: install dependencies
         run: |
-          bash scripts/install_dependencies.sh
+          mkdir build_dir && cd build_dir
+          cmake .. -DCMAKE_TOOLCHAIN_FILE=../vcpkg/scripts/buildsystems/vcpkg.cmake -DCMAKE_BUILD_TYPE=Debug
         if: steps.cache.outputs.cache-hit != 'true'
 
       - name: make build directories
         run: |
-          mkdir address_san_dir
-          mkdir leak_san_dir
-          mkdir ub_san_dir
-          mkdir thread_san_dir
-          mkdir memory_san_dir
+          mkdir address_san_dir && cp -r build_dir/vcpkg_installed/ address_san_dir
+          mkdir leak_san_dir && cp -r build_dir/vcpkg_installed/ leak_san_dir
+          mkdir ub_san_dir && cp -r build_dir/vcpkg_installed/ ub_san_dir
+          mkdir thread_san_dir && cp -r build_dir/vcpkg_installed/ thread_san_dir
 
       - name: address sanitiser
         run: |
@@ -76,12 +78,3 @@ jobs:
         working-directory: thread_san_dir
         env:
           CXX: clang++-10
-
-#      - name: memory sanitiser
-#        run: |
-#          cmake .. -DCMAKE_TOOLCHAIN_FILE=../vcpkg/scripts/buildsystems/vcpkg.cmake -DCMAKE_BUILD_TYPE=Debug -DENABLE_SANITISER_MEMORY=ON
-#          cmake --build . --parallel 2 --target unit_tests
-#          ./test/unit_tests
-#        working-directory: memory_san_dir
-#        env:
-#          CXX: clang++-10
