--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -3,7 +3,7 @@ name: Static analysis checks
 on:
   push:
     branches:
-      - xmain
+      - main
   pull_request:
     branches:
       - '**'
@@ -25,12 +25,15 @@ jobs:
         uses: actions/cache@v2
         id: cache
         with:
-          path: vcpkg/installed
-          key: ${{ runner.os }}-${{ hashFiles('scripts/vcpkg_dependencies', 'vcpkg/CHANGELOG.md') }}
+          path: |
+            vcpkg/
+            build_dir/vcpkg_installed/
+          key: ${{ runner.os }}-${{ hashFiles('vcpkg.json', 'vcpkg/CHANGELOG.md') }}
 
       - name: install dependencies
         run: |
-          bash scripts/install_dependencies.sh
+          mkdir build_dir && cd build_dir
+          cmake .. -DCMAKE_TOOLCHAIN_FILE=../vcpkg/scripts/buildsystems/vcpkg.cmake -DCMAKE_BUILD_TYPE=Debug
         if: steps.cache.outputs.cache-hit != 'true'
 
       - name: install analysers
@@ -38,8 +41,8 @@ jobs:
 
       - name: make build directories
         run: |
-          mkdir cppcheck_dir
-          mkdir clang_tidy_dir
+          mkdir cppcheck_dir && cp -r build_dir/vcpkg_installed/ cppcheck_dir
+          mkdir clang_tidy_dir && cp -r build_dir/vcpkg_installed/ clang_tidy_dir
 
       - name: compile with cppcheck
         run: |
