--- a/.github/workflows/sanitisers.yml
+++ b/.github/workflows/sanitisers.yml
@@ -13,6 +13,9 @@ jobs:
   build-and-test:
     name: Sanitiser checks
     runs-on: ubuntu-20.04
+    env:
+      CC: clang-10
+      CXX: clang++-10
 
     steps:
 
@@ -28,53 +31,40 @@ jobs:
           path: |
             vcpkg/
             build_dir/vcpkg_installed/
-          key: ${{ runner.os }}-${{ hashFiles('vcpkg.json', 'vcpkg/CHANGELOG.md') }}
+          key: ${{ runner.os }}-${{ env.CXX }}-${{ hashFiles('vcpkg.json', 'vcpkg/CHANGELOG.md') }}
 
-      - name: install dependencies
-        run: |
-          mkdir build_dir && cd build_dir
-          cmake .. -DCMAKE_TOOLCHAIN_FILE=../vcpkg/scripts/buildsystems/vcpkg.cmake -DCMAKE_BUILD_TYPE=Debug
+      - name: make build directory
+        run: mkdir build_dir
         if: steps.cache.outputs.cache-hit != 'true'
-
-      - name: make build directories
-        run: |
-          mkdir address_san_dir && cp -r build_dir/vcpkg_installed/ address_san_dir
-          mkdir leak_san_dir && cp -r build_dir/vcpkg_installed/ leak_san_dir
-          mkdir ub_san_dir && cp -r build_dir/vcpkg_installed/ ub_san_dir
-          mkdir thread_san_dir && cp -r build_dir/vcpkg_installed/ thread_san_dir
 
       - name: address sanitiser
         run: |
+          mv vcpkg_installed .. && rm -rf * && mv ../vcpkg_installed .
           cmake .. -DCMAKE_TOOLCHAIN_FILE=../vcpkg/scripts/buildsystems/vcpkg.cmake -DCMAKE_BUILD_TYPE=Debug -DENABLE_SANITISER_ADDRESS=ON
           cmake --build . --parallel 2 --target unit_tests
           ./test/unit_tests
-        working-directory: address_san_dir
-        env:
-          CXX: clang++-10
+        working-directory: build_dir
 
       - name: leak sanitiser
         run: |
+          mv vcpkg_installed .. && rm -rf * && mv ../vcpkg_installed .
           cmake .. -DCMAKE_TOOLCHAIN_FILE=../vcpkg/scripts/buildsystems/vcpkg.cmake -DCMAKE_BUILD_TYPE=Debug -DENABLE_SANITISER_LEAK=ON
           cmake --build . --parallel 2 --target unit_tests
           ./test/unit_tests
-        working-directory: leak_san_dir
-        env:
-          CXX: clang++-10
+        working-directory: build_dir
 
       - name: undefined behaviour sanitiser
         run: |
+          mv vcpkg_installed .. && rm -rf * && mv ../vcpkg_installed .
           cmake .. -DCMAKE_TOOLCHAIN_FILE=../vcpkg/scripts/buildsystems/vcpkg.cmake -DCMAKE_BUILD_TYPE=Debug -DENABLE_SANITISER_UNDEFINED_BEHAVIOUR=ON
           cmake --build . --parallel 2 --target unit_tests
           ./test/unit_tests
-        working-directory: ub_san_dir
-        env:
-          CXX: clang++-10
+        working-directory: build_dir
 
       - name: thread sanitiser
         run: |
+          mv vcpkg_installed .. && rm -rf * && mv ../vcpkg_installed .
           cmake .. -DCMAKE_TOOLCHAIN_FILE=../vcpkg/scripts/buildsystems/vcpkg.cmake -DCMAKE_BUILD_TYPE=Debug -DENABLE_SANITISER_THREAD=ON
           cmake --build . --parallel 2 --target unit_tests
           ./test/unit_tests
-        working-directory: thread_san_dir
-        env:
-          CXX: clang++-10
+        working-directory: build_dir
