--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -13,6 +13,9 @@ jobs:
   build-and-test:
     name: Static analysis checks
     runs-on: ubuntu-20.04
+    env:
+      CC: clang-10
+      CXX: clang++-10
 
     steps:
 
@@ -28,34 +31,25 @@ jobs:
           path: |
             vcpkg/
             build_dir/vcpkg_installed/
-          key: ${{ runner.os }}-${{ hashFiles('vcpkg.json', 'vcpkg/CHANGELOG.md') }}
+          key: ${{ runner.os }}-${{ env.CXX }}-${{ hashFiles('vcpkg.json', 'vcpkg/CHANGELOG.md') }}
 
-      - name: install dependencies
-        run: |
-          mkdir build_dir && cd build_dir
-          cmake .. -DCMAKE_TOOLCHAIN_FILE=../vcpkg/scripts/buildsystems/vcpkg.cmake -DCMAKE_BUILD_TYPE=Debug
+      - name: make build directory
+        run: mkdir build_dir
         if: steps.cache.outputs.cache-hit != 'true'
 
       - name: install analysers
         run: sudo apt install cppcheck clang-tidy-10
 
-      - name: make build directories
-        run: |
-          mkdir cppcheck_dir && cp -r build_dir/vcpkg_installed/ cppcheck_dir
-          mkdir clang_tidy_dir && cp -r build_dir/vcpkg_installed/ clang_tidy_dir
-
       - name: compile with cppcheck
         run: |
+          mv vcpkg_installed .. && rm -rf * && mv ../vcpkg_installed .
           cmake .. -DCMAKE_TOOLCHAIN_FILE=../vcpkg/scripts/buildsystems/vcpkg.cmake -DCMAKE_BUILD_TYPE=Debug -DENABLE_CPPCHECK=ON
           cmake --build . --parallel 2 --target data_module_lib
-        working-directory: cppcheck_dir
-        env:
-          CXX: clang++-10
+        working-directory: build_dir
 
       - name: compile with clang tidy
         run: |
+          mv vcpkg_installed .. && rm -rf * && mv ../vcpkg_installed .
           cmake .. -DCMAKE_TOOLCHAIN_FILE=../vcpkg/scripts/buildsystems/vcpkg.cmake -DCMAKE_BUILD_TYPE=Debug -DENABLE_CLANG_TIDY=ON
           cmake --build . --parallel 2 --target data_module_lib
-        working-directory: clang_tidy_dir
-        env:
-          CXX: clang++-10
+        working-directory: build_dir
