--- a/.github/workflows/python-wheels.yml
+++ b/.github/workflows/python-wheels.yml
@@ -15,7 +15,7 @@ env:
   CIBW_BUILD: cp36-* cp37-* cp38-* cp39-*
   CIBW_ARCHS: auto64
   CIBW_MANYLINUX_X86_64_IMAGE: manylinux2014
-  CIBW_BEFORE_BUILD: pip install --upgrade pip setuptools wheel ninja
+  CIBW_BEFORE_BUILD: python -m pip install --user --upgrade pip setuptools wheel ninja
   MACOSX_DEPLOYMENT_TARGET: 10.15
 
 jobs:
