--- a/.github/workflows/python-wheels.yml
+++ b/.github/workflows/python-wheels.yml
@@ -16,6 +16,9 @@ env:
   CIBW_ARCHS: auto64
   CIBW_MANYLINUX_X86_64_IMAGE: manylinux2014
   CIBW_BEFORE_BUILD: python -m pip install --user --upgrade pip setuptools wheel ninja
+  CIBW_BEFORE_BUILD_LINUX: python -m pip install --upgrade pip setuptools wheel ninja
+  CIBW_BEFORE_BUILD_WINDOWS: python -m pip install --user --upgrade pip setuptools wheel ninja
+  CIBW_BEFORE_BUILD_MACOS: python -m pip install --upgrade pip setuptools wheel ninja
   MACOSX_DEPLOYMENT_TARGET: 10.15
 
 jobs:
