--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -13,8 +13,9 @@ add_definitions(-DDATA_MODULE_TEST_DIR=\"${CMAKE_CURRENT_LIST_DIR}\")
 set(
         test_src
         TestBedMatrixType.cpp
-        TestPlinkMap.cpp
+        TestGeneticMap.cpp
         TestHapsMatrixType.cpp
+        TestPlinkMap.cpp
         utils/TestFileUtils.cpp
         utils/TestStringUtils.cpp
 )
