Correct target name for linking filesystem

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -59,15 +59,15 @@ target_link_libraries(data_module_lib PRIVATE Eigen3::Eigen fmt::fmt range-v3 ZL
 target_link_libraries(data_module_lib PRIVATE project_warnings project_settings)
 target_link_libraries(data_module_lib PRIVATE pandas_plink_lib)
 
+# Link against std filesystem on GCC < 8.4
+if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
+    if (CMAKE_CXX_COMPILER_VERSION VERSION_LESS 8.4)
+        target_link_libraries(data_module_lib PRIVATE stdc++fs)
+    endif ()
+endif ()
+
 if (PYTHON_BINDINGS)
     set_target_properties(data_module_lib PROPERTIES POSITION_INDEPENDENT_CODE TRUE)
     pybind11_add_module(asmc_data_module python_bindings/bindings.cpp)
     target_link_libraries(asmc_data_module PRIVATE Eigen3::Eigen fmt::fmt range-v3 ZLIB::ZLIB data_module_lib)
-endif ()
-
-# Link against std filesystem on GCC < 8.4
-if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
-    if (CMAKE_CXX_COMPILER_VERSION VERSION_LESS 8.4)
-        target_link_libraries(ASMC PRIVATE stdc++fs)
-    endif ()
 endif ()
