--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,7 @@ build
 # IDE generated directories
 .idea/*
 cmake-build*
+.vs*
 
 # Python virtual environments
 venv
@@ -48,3 +49,6 @@ venv
 *.egg-info/
 dist
 .ipynb_checkpoints
+
+# Packaging files
+vcpkg_installed
